--- a/essai.html
+++ b/essai.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <title>Math Quiz</title>
-    <link href="mathquiz.css" rel="stylesheet" />
+    <link href="essai.css" rel="stylesheet" />
 </head>
 <body>
  
     <output id="result"></output>
-    <a href="mathQuiz.html">Ask Question</a>
+    <a href="essai.html">Ask Question</a>
  
-    <script src="mathQuiz.js"></script>
+    <script src="essai.js"></script>
 </body>
 </html>
