--- a/Socket.io/index.html
+++ b/Socket.io/index.html
@@ -27,11 +27,20 @@
 			
 			$messageForm.submit(function(e){
 				e.preventDefault();
-				socket.emit('send message',document.getElementById('interim_span').textContent);
+				var tab_temp = [];
+				tab_temp.push(document.getElementById('interim_span').textContent);
+				socket.emit('send message',tab_temp);
 			});
 			
 			socket.on('new message', function(data){
-				$chat.append(data + "<br/>");
+		        var select = document.createElement('SELECT')  
+		        for (var i = 0; i < data.length; ++i) { 
+		          var option = document.createElement('OPTION')  
+		          option.text = data[i];
+		          option.value = i;
+		          select.options.add(option)
+		        }
+		        document.getElementById('chat').appendChild(select);
 			});
 		});
 	</script>
@@ -48,7 +57,6 @@
 </div>
 <button onclick="microphoneButton()" style="border: 0; background-color:transparent">
   <img id="status_img" src="mic.gif" alt="Start"></button>
-<button onclick="emailButton()">Create Email</button>
 <div id="div_language">
   <select id="select_language" onchange="updateCountry()"></select>
   <select id="select_dialect"></select>
@@ -71,7 +79,12 @@ reco.recognition.onresult = function(event) {
   for (var i = event.resultIndex; i < event.results.length; ++i) {
     if (event.results[i].isFinal) {
       appendSelectOptions('final_span', event.results[i]);
-      socket.emit('send message', document.getElementById('final_span').getElementsByTagName('OPTION')[0].text);
+      var tab_res = [];
+      for (var i = 0; i < document.getElementById('final_span').getElementsByTagName('OPTION').length; ++i) { 
+      	tab_res.push(document.getElementById('final_span').getElementsByTagName('OPTION')[i].text);
+      }
+      socket.emit('send message', tab_res);
+      document.getElementById('final_span').textContent = '';
     } else {
       interim_transcript += event.results[i][0].transcript;
     }
@@ -109,31 +122,6 @@ reco.onEnd = function() {
   }
 };
 
-// Handler when user clicks "Create Email" button.
-function emailButton() {
-  if (reco.inProgress()) {
-    // Wait for recognition to end before calling createEmail().
-    create_email_on_end = true;
-    reco.stop();
-  } else {
-    // Recognition has already ended, call createEmail() now.
-    createEmail(reco.final_transcript);
-  }
-  reco.onState('complete');
-}
-
-// Create email by splitting string s into subject and body.
-function createEmail(s) {
-  // Determine a good place to split it: end of first line, else at a space.
-  var n = s.indexOf('\n');
-  if (n < 0 || n >= 80) {
-    n = 40 + s.substring(40).indexOf(' ');
-  }
-  var subject = encodeURI(s.substring(0, n));
-  var body = encodeURI(s.substring(n + 1));
-  // Open default email provider.
-  window.location.href = 'mailto:?subject=' + subject + '&body=' + body;
-}
 
 var langs =
 [['Afrikaans',       ['af-ZA']],
