--- a/Socket.io/reveal.html
+++ b/Socket.io/reveal.html
@@ -15,7 +15,7 @@
 		  <script src="webspeech.js"></script>
 
 
-		<div id="chat"></div>
+		<div id="contenu"></div>
 		<div id="status"></div>
 		<div id="results">
 		  <span id="final_span" style="color:black"></span>
@@ -69,8 +69,9 @@
 		
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="reveal.js"></script>
-		<script src="note.js"></script>
+		
 		<script src="socket_server_reveal.js"></script>
+		<script src="note.js"></script>
   		<script src="reco.js"></script>
 			
 	</body>
