--- a/Socket.io/reveal.html
+++ b/Socket.io/reveal.html
@@ -52,6 +52,9 @@
 					<section>
 						<h2>Premier</h2>
 						<p>There's no theme included, so it will fall back on browser defaults.</p>
+						<aside class="notes">
+				        	Simpmlifier Oh hey, these are some nontation, but you can see them if you open the speaker notes window (hit 's' on your keyboard)
+				    	</aside>
 					</section>
 				</section>
 				<section>
