--- a/Socket.io/client.html
+++ b/Socket.io/client.html
@@ -1,3 +1,8 @@
+<?php
+// On démarre la session AVANT d'écrire du code HTML
+session_start();
+?>
+
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
