--- a/meteor/leaderboard/leaderboard.html
+++ b/meteor/leaderboard/leaderboard.html
@@ -4,6 +4,8 @@
 
 <body>
   <h1>Welcome to Meteor!</h1>
+  {{> loginButtons}}
+
 	{{> addPlayerForm}}
 
   {{> leaderboard}}
@@ -11,8 +13,6 @@
 </body>
 
 <template name="leaderboard">
-
-
 	{{#each player}}
 		<li class='player {{selectedClass}}'> 
 			{{name}} a {{score}} point(s)
@@ -29,16 +29,17 @@
 			<input type="button" class="increment" value="Give 5 Points">
 		</li>
 	{{/if}}
-
 </template>
 
 
 
 <template name="addPlayerForm">
-	<form>
-		<input type="text" name="playerName">
-		<input type="submit" value="Add Player">
-	</form>
+	{{#if currentUser}}
+		<form>
+			<input type="text" name="playerName">
+			<input type="submit" value="Add Player">
+		</form>
+	{{/if}}
 </template>
 
 
