--- a/meteor/RealTimeSubtitles/RealTimeSubtitles.html
+++ b/meteor/RealTimeSubtitles/RealTimeSubtitles.html
@@ -3,17 +3,119 @@
 </head>
 
 <body>
-	<p class="login">
-	  {{> loginButtons}}
-	</p>
-	<button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i></button>
-	<h1>Welcome to LiveSubtitle!</h1>
-	{{> addCourseForm}}
-  	{{> coursesTables}}
-  	{{> displaySlide}}
+
+	{{> navbar}}
+    {{> caroussel}}
+    
+    <!-- en cours 
+    {{> usertype}}
+    {{> teacher}}
+    {{> student}} -->
+	
+ 	<div class="site-wrapper">
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+          <div class="inner cover">
+          	<button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i></button>
+			<h1>Welcome to LiveSubtitle!</h1>
+				{{> addCourseForm}}
+	  			{{> coursesTables}}
+	  			{{> displaySlide}}
+          </div>
+          
+          <div class="mastfoot">
+            <div class="inner">
+              <p>By RICM4</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+  	</div>
 
 </body>
 
+<template name="navbar">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">LiveSubtitle</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="#signin">{{> loginButtons}}</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+</template>
+
+<template name="caroussel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Presentation</h1>
+              <p>NHFGHDFGDSHsdgfdxhnxdhwdhwdjhnwd</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>How to use</h1>
+              <p>CGDFGSGSEFswdfsdges</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Enjoy</h1>
+              <p>ldfkldskgksklgkl</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+</template>
+
+<template name="usertype">
+	<p>
+    	<button type="button" class="btn btn-lg btn-primary">Teacher</button>
+    </p>
+    <p>
+        <button type="button" class="btn btn-lg btn-primary">Student</button>
+    </p>
+</template>
 
 <template name="displaySlide">
 	{{#if thereIsSlide}}
@@ -35,7 +137,6 @@
 	{{/if}}
 </template>
 
-
 <template name="displayWord">
 	
 	{{#if addOpt var}}
@@ -53,11 +154,7 @@
 			<span class='displayWord {{displayWordCss}}'>{{displayWord var}}</span>
 		{{/if}}
 	{{/if}}
-	
 </template>
-
-
-
 
 <template name="addWordOpt">
 	<form>
@@ -90,9 +187,6 @@
 	{{/if}}
 </template>
 
-
-
-
 <template name="coursesTables">
 	{{#each course}}
 		<li class='course'> 
@@ -109,8 +203,6 @@
 		</li>
 	{{/each}}
 </template>
-
-
 
 <template name="addCourseForm">
 	{{#if currentUser}}
